data/derived/sp14/progs/unify/prog0769.ml.out
Characters 78-90:
  | h::t -> (helper t l h::acc) in
             ^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
